--- a/smart_mirror/package.json
+++ b/smart_mirror/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@expo/vector-icons": "^12.0.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@react-navigation/bottom-tabs": "^5.11.9",
+    "@react-navigation/stack": "^5.14.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,6 +17,7 @@
     "react-analog-clock": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-live-clock": "^5.0.16",
+    "react-native": "^0.64.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
