changed pretty all files and new alignment + more beautiful look

--- a/smart_mirror/package.json
+++ b/smart_mirror/package.json
@@ -5,16 +5,25 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@react-navigation/bottom-tabs": "^5.11.9",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "expo-linking": "^2.1.1",
+    "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-analog-clock": "^2.1.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-fontawesome": "^1.7.1",
     "react-live-clock": "^5.0.16",
+    "react-native-appearance": "^0.3.4",
     "react-scripts": "4.0.3",
+    "react-skycons": "^0.8.8",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
   },
