--- a/smart_mirror/package.json
+++ b/smart_mirror/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-live-clock": "^5.0.16",
+    "react-native": "^0.64.0",
     "react-native-appearance": "^0.3.4",
     "react-scripts": "4.0.3",
     "react-skycons": "^0.8.8",
