--- a/smart_mirror/package.json
+++ b/smart_mirror/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
+    "react-google-calendar-api": "^1.4.0",
     "react-live-clock": "^5.0.16",
     "react-native": "^0.64.0",
     "react-native-appearance": "^0.3.4",
